avoid CME when iterating classesByName result list